# mira

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  install.sh  main.py  multily.md  pyproject.toml
agent/: __init__.py
component/: __init__.py  chat.py  diff_block.py  header.py  message.py  status_bar.py  theme.py  tool_message.py
config/: __init__.py  session_store.py  store.py
llm/: __init__.py
tools/: __init__.py  file_ops.py  git_utils.py  init_command.py  propose_edit.py  search.py
