[project]
name = "mira"
version = "0.1.0"
description = "A modern AI-assisted coding terminal application"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Arnav Saini", email = "arnavsaini114@gmail.com" },
]
requires-python = ">=3.13"
keywords = ["ai", "coding", "terminal", "tui", "langchain", "textual"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "langchain-anthropic>=1.3.1",
    "langchain-google-genai>=4.1.3",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.5",
    "textual>=0.89.0",
]

[project.scripts]
mira = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["main.py", "agent", "component", "config", "llm", "tools"]
